# CompetitiveProgramming

./: .gitignore  Problem1.in  pyproject.toml
.github/workflows/: contest-tracker.yml  lint.yml
ITSA/202303/: Problem1.cpp  Problem1.java  Problem2  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  Problem6.cpp  Problem7.cpp
ITSA/202304/: Problem  Problem1.cpp  Problem2.cpp  Problem3.cpp  Problem4.cpp  Problem5.cpp  Problem6.cpp  Problem7.cpp
ITSA/202304/input/: Problem1.in  Problem3.in  Problem4.in  Problem5.in  Problem6.in  Problem7.in
ITSA/202304/output/: Problem1.out  (+5 more)
ITSA/202305/: Problem2  Problem2.cpp
PUPC/2023 6-24-2023-輔大資工 PUPC 2023 模擬賽4/: A280_out.txt  B583_in.txt  B583_out.txt  D884_in.txt  D884_out.txt  E10684_in.txt  E10684_out.txt  F11461_in.txt  F11461_out.txt  G12289_in.txt  G12289_out.txt  H12406_in.txt
bot/: README.md  github_issue.py  main.py  models.py  pyproject.toml  state.py
bot/scrapers/: __init__.py  base.py  itsa.py  tioj.py  toi.py  zerojudge.py
bot/tests/: test_github_client.py  test_issue_render.py  test_itsa.py  test_main.py  test_models.py  test_scraper_base.py  test_state.py  test_tioj.py  test_toi.py  test_zerojudge.py
bot/tests/fixtures/: itsa_synthetic.html  tioj_live_contest_107_2026-05-14.html  tioj_live_listing_2026-05-14.html  tioj_synthetic_contest.html  tioj_synthetic_listing.html  toi_live_https___tioj_ck_tp_edu_tw_contests_71_2026-05-15.html  toi_live_https___tpmso_org_toi__2026-05-15.html  toi_synthetic.html  zerojudge_live_listing_2026-05-14.html  zerojudge_synthetic_contest.html  zerojudge_synthetic_listing.html
data/: tracked_contests.json
自辦賽/0609/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp
自辦賽/0616/: A.cpp  B.cpp  B.in  D.cpp
自辦賽/0623/: A.cpp  B.cpp  B.in  F.cpp
自辦賽/0630/: A.cpp  B.cpp  B.in  E.cpp
(+612 files in other folders)
