[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contest-tracker-bot"
version = "0.1.0"
description = "Auto-tracks Taiwanese competitive programming contests as GitHub issues"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["bs4", "bs4.*", "lxml", "lxml.*"]
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["bot.tests.*", "tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false
disallow_any_generics = false
warn_unused_ignores = false
